--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -10,13 +10,13 @@ metadata:
 spec:
   releaseName: podinfo-dev
   chart:
-    git: git@github.com:fluxcd/helm-operator-get-started
+    git: git@github.com:antbrowne/helm-operator-get-started
     path: charts/podinfo
     ref: master
   values:
     image:
-      repository: stefanprodan/podinfo
-      tag: dev-hdtwcel9
+      repository: antbrowne/podinfo
+      tag: dev-4iiqqo7m
     replicaCount: 1
     hpa:
       enabled: false
